tests/errors/continue_outside_loop.efto
// Continue outside a loop is an error.
continue; // expect error: Can't use 'continue' outside of a loop.
